Introduction Video Issue Resolved with an additional support to start using javascript

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ End Fixed Navigation
 	</div>
 </div> --> 
 <div class="introduction">
-  <video autoplay="true">
+  <video playsinline autoplay muted loop class="introVideo">
     <source src="DevTech.mp4" type="video/mp4">
      <!-- <source src="movie.ogg" type="video/ogg"> -->
     Your browser does not support the video tag.
