--- a/index.html
+++ b/index.html
@@ -505,25 +505,12 @@ Start About Section
   <!-- end Footer Area
     ========================================== -->
 
-  <!-- 
-    Essential Scripts
-    =====================================-->
-  <!-- Main jQuery -->
-  <!-- <script src="plugins/jquery/jquery.min.js"></script> -->
-
-  <!-- Bootstrap4 -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-  <!-- Owl Carousel -->
-  <!-- <script src="plugins/slick/slick.min.js"></script> -->
-  <!-- Smooth Scroll js -->
-  <!-- <script src="plugins/smooth-scroll/smooth-scroll.min.js"></script> -->
+  <!-- Bootstrap5 -->
+  <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
   <!-- Fontawesone -->
   <script src="plugins/fontawesome/all.min.js"></script>
-
   <!-- Custom js -->
   <script src="js/script.js"></script>
 
 </body>
-
 </html>
