--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- Home Introduction -->
   <div class="introduction">
     <video playsinline autoplay muted loop class="introVideo">
-      <source src="./pexels-tea-oebel-6804109.mp4" type="video/mp4">
+      <source src="./pexels-tea-oebel.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
