Index Page Responsiveness Completed

--- a/about.html
+++ b/about.html
@@ -52,45 +52,34 @@
 <!--
 Fixed Navigation
 ==================================== -->
-<header class="navigation fixed-top">
-	<div class="container">
-	  <!-- main nav -->
-	  <nav class="navbar navbar-expand-lg navbar-light">
-		<!-- logo -->
-		<a class="navbar-brand logo" href="index.html">
-		  <span class="logo-default">DevTech.</span>
-		  <span class="logo-white">DevTech.</span>
-		</a>
-		<!-- /logo -->
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-		  aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-  
-		<div class="collapse navbar-collapse" id="navigation">
-		  <ul class="navbar-nav ml-auto text-center">
-			<li class="nav-item">
-			  <a class="nav-link" href="index.html">Home</a>
-			</li>
-			<li class="nav-item active">
-			  <a class="nav-link" href="about.html">About Us</a>
-			</li>
-			<li class="nav-item ">
-			  <a class="nav-link" href="service.html">Services</a>
-			</li>
-			<li class="nav-item ">
-			  <a class="nav-link" href="contact.html">Contact</a>
-			</li>
-		  </ul>
-		</div>
-	  </nav>
-	  <!-- /main nav -->
-	</div>
+<header class="navigation fixed-top" id="fixedNav">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-lg">
+            <a class="navbar-brand logo" href="index.html">
+              <img src="./assets/logo.png" alt="" class="logo-default">
+              <img src="./assets/logo-white.png" alt="" class="logo-white">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <div class="line line1"></div>
+                <div class="line line2"></div>
+                <div class="line line3"></div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto text-center">
+                  <li class="nav-item active"> <a class="nav-link" href="index.html">Home</a> </li>
+                  <li class="nav-item "> <a class="nav-link" href="about.html">About Us</a> </li>
+                  <li class="nav-item "> <a class="nav-link" href="service.html">Services</a> </li>
+                  <li class="nav-item "> <a class="nav-link" href="contact.html">Contact</a> </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
   </header>
 <!--
 End Fixed Navigation
 ==================================== -->
-
 <section class="single-page-header">
 	<div class="container">
 		<div class="row">
@@ -141,7 +130,7 @@ End Fixed Navigation
 <!--
 Start Call To Action
 ==================================== -->
-<section class="call-to-action-2 section">
+<section class="call-to-action about-call-to-action section">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
