single-page-header updated

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@ Fixed Navigation
 		</button>
   
 		<div class="collapse navbar-collapse" id="navigation">
-		  <ul class="navbar-nav ml-auto text-center">
+		  <ul class="navbar-nav ms-auto text-center">
 			<li class="nav-item">
 			  <a class="nav-link" href="index.html">Home</a>
 			</li>
@@ -96,15 +96,7 @@ End Fixed Navigation
 
 <section class="single-page-header">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<h2>Contact Us</h2>
-				<ol class="breadcrumb header-bradcrumb">
-				  <li><a href="index.html">Home</a></li>
-				  <li class="active">Contact Us</li>
-				</ol>
-			</div>
-		</div>
+		<h2>Contact Us</h2>
 	</div>
 </section>
 
