--- a/about.html
+++ b/about.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="description"
-	  content="DevTech is the Online Software Company with a Team of developers who has the possession to generate quality products. DevTech Provides Services that includes Web Design and Development, Wordpress Development, and Mobile Application Development">
+		content="DevTech is the Online Software Company with a Team of developers who has the possession to generate quality products. DevTech Provides Services that includes Web Design and Development, Wordpress Development, and Mobile Application Development">
 	<meta name="author" content="Muhammad Haseeb">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta http-equiv="X-UA-Compatible" content="IE=7">
 	<meta name="keywords"
-	  content="web development, web programming, web design, wordpress, website, flutter, mobile app development,">
+		content="web development, web programming, web design, wordpress, website, flutter, mobile app development,">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<title>DevTech. | About</title>
-  
+	<title>DevTech. | About</title>
+
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="./favicon..ico" />
-  
+
 	<!-- CSS
 	================================================== -->
 	<!-- bootstrap.min css -->
 	<link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
 	<!-- Main Stylesheet -->
-	<link rel="stylesheet" href="css/style.css">  
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body id="body">
-
- <!--
-  Start Preloader
+	<!-- Start Preloader
   ==================================== -->
-  <div id="preloader">
-    <div class='preloader'>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </div> 
-  <!--
-  End Preloader
-  ==================================== -->
+	<div id="preloader">
+		<div class='preloader'>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</div>
 
-<!--
-Fixed Navigation
+	<!-- Fixed Navigation
 ==================================== -->
 	<header class="navigation fixed-top" id="fixedNav">
 		<nav class="navbar navbar-expand-lg navbar-light">
-			<div class="container-lg">
+			<div class="container-md">
 				<a class="navbar-brand logo" href="index.html">
-				<img src="./assets/logo.png" alt="" class="logo-default">
-				<img src="./assets/logo-white.png" alt="" class="logo-white">
+					<img src="./assets/logo.png" alt="" class="logo-default">
+					<img src="./assets/logo-white.png" alt="" class="logo-white">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -61,40 +56,47 @@ Fixed Navigation
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ms-auto text-center">
-					<li class="nav-item "> <a class="nav-link" href="index.html">Home</a> </li>
-					<li class="nav-item active"> <a class="nav-link" href="about.html">About Us</a> </li>
-					<li class="nav-item "> <a class="nav-link" href="service.html">Services</a> </li>
-					<li class="nav-item "> <a class="nav-link" href="contact.html">Contact</a> </li>
+						<li class="nav-item "> <a class="nav-link" href="index.html">Home</a> </li>
+						<li class="nav-item active"> <a class="nav-link" href="about.html">About Us</a> </li>
+						<li class="nav-item "> <a class="nav-link" href="service.html">Services</a> </li>
+						<li class="nav-item "> <a class="nav-link" href="contact.html">Contact</a> </li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-<!--
-End Fixed Navigation
-==================================== -->
+
 	<section class="single-page-header">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h2>About Us</h2>
-					<ol class="breadcrumb header-bradcrumb">
-					<li><a href="index.html">Home</a></li>
-					<li class="active">About Us</li>
-					</ol>
-				</div>
+			<h2>About Us</h2>
+			<div class="page-detail mx-auto">
+				DevTech is striving to continually improve the efficiency and productivity of the IT services thus
+				ensuring the highest level of client satisfaction
 			</div>
 		</div>
 	</section>
+	<!-- <section class="header-bradcrumb py-3 bg-dark">
+		<div class="container text-center" aria-label="breadcrumb">
+			<ol class="breadcrumb w-25 mx-auto justify-content-center">
+			  <li class="breadcrumb-item"><a href="#">Home</a></li>
+			  <li class="breadcrumb-item active" aria-current="page">About Us</li>
+			</ol>
+		</div>
+	</section> -->
 
 	<section class="about-shot-info section-sm">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 mt-20">
 					<h2>We Create Designs<br> and technology</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat voluptate molestias, quaerat quo natus dolor harum voluptatibus modi dicta ducimus.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quae officia earum dolore est quaerat cupiditate voluptatibus id, magni alias veniam voluptate, libero explicabo, distinctio atque!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, fugit itaque ratione incidunt voluptas. Quaerat quidem dolor, quisquam amet inventore quas adipisci ea sint qui placeat beatae molestias aut, aperiam!</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat voluptate molestias, quaerat
+						quo natus dolor harum voluptatibus modi dicta ducimus.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quae officia earum dolore est
+						quaerat cupiditate voluptatibus id, magni alias veniam voluptate, libero explicabo, distinctio
+						atque!</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, fugit itaque ratione incidunt
+						voluptas. Quaerat quidem dolor, quisquam amet inventore quas adipisci ea sint qui placeat beatae
+						molestias aut, aperiam!</p>
 				</div>
 				<div class="col-md-6">
 					<img class="img-fluid" src="assets/company/company-image.jpg" alt="">
@@ -108,12 +110,12 @@ End Fixed Navigation
 			<div class="row">
 				<div class="col-md-6">
 					<h3>Our Mission</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere in suscipit voluptatum totam dolores assumenda vel, quia earum voluptatem blanditiis vero accusantium saepe aliquid nulla nemo accusamus, culpa inventore! Culpa nemo aspernatur tenetur, at quam aliquid reprehenderit obcaecati dicta illum mollitia, perferendis hic, beatae voluptates? Ex labore, obcaecati harum nam.</p>
+					<p>We aim to provide all sorts of web-based services under one umbrella. Our foremost goal is to provide you with the most innovative, effective, and affordable technology solutions that meet the needs of your online business. We’re just a call away to provide you excellent, affordable, and reliable web services every time.</p>
 					<img src="assets/company/company-image-2.jpg" alt="" class="img-fluid mt-30">
 				</div>
 				<div class="col-md-6">
 					<h3>Our Vision</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere in suscipit voluptatum totam dolores assumenda vel, quia earum voluptatem blanditiis vero accusantium saepe aliquid nulla nemo accusamus, culpa inventore! Culpa nemo aspernatur tenetur, at quam aliquid reprehenderit obcaecati dicta illum mollitia, perferendis hic, beatae voluptates? Ex labore, obcaecati harum nam.</p>
+					<p>Our vision is to excel in the field of computer technology. We are committed to providing the highest customer service, consistent performance, support, and project management. We aim to provide you with a single point of contact for any of your business technology needs.</p>
 					<img src="assets/company/company-image-3.jpg" alt="" class="img-fluid mt-30">
 				</div>
 			</div>
@@ -124,15 +126,16 @@ End Fixed Navigation
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempor eros. Pellentesque elementum nulla sed justo tempor posuere sit amet sit amet ligula.</h2>
+					<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempor eros. Pellentesque
+						elementum nulla sed justo tempor posuere sit amet sit amet ligula.</h2>
 				</div>
-			</div> 		<!-- End row -->
-		</div>   	<!-- End container -->
-	</section> 
+			</div> <!-- End row -->
+		</div> <!-- End container -->
+	</section>
 
 
 
-<!-- <section class="section grallery">
+	<!-- <section class="section grallery">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
@@ -170,7 +173,8 @@ End Fixed Navigation
 				<div class="col-12">
 					<div class="title text-center ">
 						<h2>Our Team</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quasi tempora obcaecati, quis
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quasi tempora obcaecati,
+							quis
 							similique quos.</p>
 						<div class="border"></div>
 					</div>
@@ -179,32 +183,28 @@ End Fixed Navigation
 
 				<!-- team member -->
 				<div class="col-md-4 col-sm-6 ">
-					<div class="team-member text-center">
-						<div class="member-photo">
-							<!-- member photo -->
-							<img class="img-fluid" src="assets/team/member-1.jpg" alt="Meghna">
-							<!-- /member photo -->
-
-							<!-- member social profile -->
-							<div class="mask">
-								<ul class="clearfix">
-									<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-google-outline"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-dribbble"></i></a></li>
-								</ul>
-							</div>
-							<!-- /member social profile -->
+					<div class="text-center team-box" >
+						<img src="/assets/team/member-1.jpg" alt="Tauseef" class="img-fluid">
+						<div >
+							<h5 class="mt-4 mb-1" >Muhammad Haseeb</h5>
+							<h6 class="mb-3" >CEO & Founder</h6>
+							<p >You can relay on our amazing features list and also our
+								customer services will be great experience.</p>
+							<ul class="list-inline" >
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="fab fa-facebook-f fb"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="fab fa-twitter tw"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons "><i class="fab fa-linkedin-in ln"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class=" icons"><i class="far fa-envelope gm"></i></a>
+								</li>
+							</ul>
 						</div>
-
-						<!-- member name & designation -->
-						<div class="member-content">
-							<h3>Michael Jonson</h3>
-							<span>Head Of Marketing</span>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-						</div>
-						<!-- /member name & designation -->
-
 					</div>
 				</div>
 				<!-- end team member -->
@@ -233,7 +233,8 @@ End Fixed Navigation
 						<div class="member-content">
 							<h3>Carrick Mollenkamp</h3>
 							<span>Web Developer</span>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam,
+								culpa odio.</p>
 						</div>
 						<!-- /member name & designation -->
 					</div>
@@ -264,7 +265,8 @@ End Fixed Navigation
 						<div class="member-content">
 							<h3>David Gauthier</h3>
 							<span>Head Of Management</span>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam,
+								culpa odio.</p>
 						</div>
 						<!-- /member name & designation -->
 
@@ -281,11 +283,12 @@ End Fixed Navigation
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<h2>Let's Create Something Together</h2>
-					<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin bibendum auctor, <br> nisi elit consequat ipsum, nesagittis sem nid elit. Duis sed odio sitain elit.</p>
+					<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin bibendum auctor, <br> nisi elit
+						consequat ipsum, nesagittis sem nid elit. Duis sed odio sitain elit.</p>
 					<a href="" class="btn btn-main">Contact Us</a>
 				</div>
-			</div> 		<!-- End row -->
-		</div>   	<!-- End container -->
+			</div> <!-- End row -->
+		</div> <!-- End container -->
 	</section>
 
 
@@ -293,75 +296,77 @@ End Fixed Navigation
 		<div class="top-footer">
 			<div class="container">
 				<div class="row">
-				<div class="footer-about col-sm-4 col-md-4 col-lg-4">
-					<img class="logo" src="./assets/logo-white.png" alt="logo">
-					<p>We, DevTech, are the company to ensure the future strong through the software development, specialized in
-					communication and network.</p>
-					<div class="social">
-					<a href="#" target="_blank">
-						<i class="fab fa-facebook-f icons socialIcon" style="color: #3B5998"></i>
-					</a>
-					<a href="#" target="_blank">
-						<i class="fab fa-twitter icons socialIcon" style="color: #55ACEE"></i>
-					</a>
-					<a href="#" target="_blank">
-						<i class="fab fa-linkedin-in icons socialIcon" style="color: #006FAB"></i>
-					</a>
+					<div class="footer-about col-sm-4 col-md-4 col-lg-4">
+						<img class="logo" src="./assets/logo-white.png" alt="logo">
+						<p>We, DevTech, are the company to ensure the future strong through the software development,
+							specialized in
+							communication and network.</p>
+						<div class="social">
+							<a href="#" target="_blank">
+								<i class="fab fa-facebook-f icons socialIcon" style="color: #3B5998"></i>
+							</a>
+							<a href="#" target="_blank">
+								<i class="fab fa-twitter icons socialIcon" style="color: #55ACEE"></i>
+							</a>
+							<a href="#" target="_blank">
+								<i class="fab fa-linkedin-in icons socialIcon" style="color: #006FAB"></i>
+							</a>
+						</div>
 					</div>
-				</div>
-				<!-- End of .col-sm-3 -->
-		
-				<div class="col-sm-4 col-md-4 col-lg-4">
-					<div class="back-to-top">
-					<!-- Back to Top Button -->
-					<a href="#" class="scroll-arrow-btn" id="back-to-top">
-						<!-- Circular Waves -->
-						<span class="waves-circle">
-						<span class="wavesline-1"></span>
-						<span class="wavesline-2"></span>
-						</span>
-						<!-- SVG Upward Arrow Icon  -->
-						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.251 13.748">
-						<path
-							d="M4.607-7.76a.328.328,0,0,0-.465,0L.1-3.746a.328.328,0,0,0,0,.465l.541.541a.328.328,0,0,0,.465,0L4.375-5.98,7.648-2.74a.328.328,0,0,0,.465,0l.541-.541a.328.328,0,0,0,0-.465Z"
-							transform="translate(0.251 16.107)"></path>
-						<path
-							d="M4.607-7.76a.328.328,0,0,0-.465,0L.1-3.746a.328.328,0,0,0,0,.465l.541.541a.328.328,0,0,0,.465,0L4.375-5.98,7.648-2.74a.328.328,0,0,0,.465,0l.541-.541a.328.328,0,0,0,0-.465Z"
-							transform="translate(0.251 12.107)"></path>
-						<path
-							d="M4.607-7.76a.328.328,0,0,0-.465,0L.1-3.746a.328.328,0,0,0,0,.465l.541.541a.328.328,0,0,0,.465,0L4.375-5.98,7.648-2.74a.328.328,0,0,0,.465,0l.541-.541a.328.328,0,0,0,0-.465Z"
-							transform="translate(0.251 8.107)"></path>
-						</svg>
-					</a>
+					<!-- End of .col-sm-3 -->
+
+					<div class="col-sm-4 col-md-4 col-lg-4">
+						<div class="back-to-top">
+							<!-- Back to Top Button -->
+							<a href="#" class="scroll-arrow-btn" id="back-to-top">
+								<!-- Circular Waves -->
+								<span class="waves-circle">
+									<span class="wavesline-1"></span>
+									<span class="wavesline-2"></span>
+								</span>
+								<!-- SVG Upward Arrow Icon  -->
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.251 13.748">
+									<path
+										d="M4.607-7.76a.328.328,0,0,0-.465,0L.1-3.746a.328.328,0,0,0,0,.465l.541.541a.328.328,0,0,0,.465,0L4.375-5.98,7.648-2.74a.328.328,0,0,0,.465,0l.541-.541a.328.328,0,0,0,0-.465Z"
+										transform="translate(0.251 16.107)"></path>
+									<path
+										d="M4.607-7.76a.328.328,0,0,0-.465,0L.1-3.746a.328.328,0,0,0,0,.465l.541.541a.328.328,0,0,0,.465,0L4.375-5.98,7.648-2.74a.328.328,0,0,0,.465,0l.541-.541a.328.328,0,0,0,0-.465Z"
+										transform="translate(0.251 12.107)"></path>
+									<path
+										d="M4.607-7.76a.328.328,0,0,0-.465,0L.1-3.746a.328.328,0,0,0,0,.465l.541.541a.328.328,0,0,0,.465,0L4.375-5.98,7.648-2.74a.328.328,0,0,0,.465,0l.541-.541a.328.328,0,0,0,0-.465Z"
+										transform="translate(0.251 8.107)"></path>
+								</svg>
+							</a>
+						</div>
 					</div>
-				</div>
-				<!-- End of .col-sm-3 -->
-		
-				<div class="sm-d-none col-sm-4 col-md-4 col-lg-4">
-					<ul class="mt-20">
-					<li>
-						<h3>Our Services</h3>
-					</li>
-					<li><a href="#">Web Design</a></li>
-					<li><a href="#">PHP Development</a></li>
-					<li><a href="#">Graphic Design</a></li>
-					<li><a href="#">Wordpress Design</a></li>
-					</ul>
-				</div>
-				<!-- End of .col-sm-3 -->
+					<!-- End of .col-sm-3 -->
+
+					<div class="sm-d-none col-sm-4 col-md-4 col-lg-4">
+						<ul class="mt-20">
+							<li>
+								<h3>Our Services</h3>
+							</li>
+							<li><a href="#">Web Design</a></li>
+							<li><a href="#">PHP Development</a></li>
+							<li><a href="#">Graphic Design</a></li>
+							<li><a href="#">Wordpress Design</a></li>
+						</ul>
+					</div>
+					<!-- End of .col-sm-3 -->
 				</div>
 			</div> <!-- end container -->
-			</div>
-			<div class="footer-bottom">
+		</div>
+		<div class="footer-bottom">
 			<h5>Copyright &copy; 2022. All rights reserved.</h5>
-			</div>
-		</footer> 
-    
-    <!-- Bootstrap4 -->
-    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+		</div>
+	</footer>
 
-    <!-- Custom js -->
-    <script src="js/script.js"></script>
+	<!-- Bootstrap4 -->
+	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>
 
-  </body>
-  </html>
+	<!-- Custom js -->
+	<script src="js/script.js"></script>
+
+</body>
+
+</html>
