--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
   <header class="navigation fixed-top" id="fixedNav">
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-lg">
+        <div class="container-md">
             <a class="navbar-brand logo" href="index.html">
               <img src="./assets/logo.png" alt="" class="logo-default">
               <img src="./assets/logo-white.png" alt="" class="logo-white">
