About us Page updated

--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
 	================================================== -->
 	<!-- bootstrap.min css -->
 	<link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
+	<!-- fontawesome.min css -->
+	<link rel="stylesheet" href="plugins/fontawesome/all.min.css">
 	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -169,7 +171,6 @@
 	<section class="team" id="team">
 		<div class="container">
 			<div class="row">
-				<!-- section title -->
 				<div class="col-12">
 					<div class="title text-center ">
 						<h2>Our Team</h2>
@@ -179,14 +180,14 @@
 						<div class="border"></div>
 					</div>
 				</div>
-				<!-- /section title -->
-
+			</div>
+			<div class="row justify-content-evenly">
 				<!-- team member -->
 				<div class="col-md-4 col-sm-6 ">
 					<div class="text-center team-box" >
 						<img src="/assets/team/member-1.jpg" alt="Tauseef" class="img-fluid">
 						<div >
-							<h5 class="mt-4 mb-1" >Muhammad Haseeb</h5>
+							<h5 class="mt-4 mb-1" >ABC</h5>
 							<h6 class="mb-3" >CEO & Founder</h6>
 							<p >You can relay on our amazing features list and also our
 								customer services will be great experience.</p>
@@ -201,80 +202,66 @@
 									<a href="#" class="icons "><i class="fab fa-linkedin-in ln"></i></a>
 								</li>
 								<li class="list-inline-item" >
-									<a href="#" class=" icons"><i class="far fa-envelope gm"></i></a>
+									<a href="#" class="icons"><i class="far fa-envelope gm"></i></a>
 								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
-				<!-- end team member -->
-
 				<!-- team member -->
 				<div class="col-md-4 col-sm-6 ">
-					<div class="team-member text-center">
-						<div class="member-photo">
-							<!-- member photo -->
-							<img class="img-fluid" src="assets/team/member-2.jpg" alt="Meghna">
-							<!-- /member photo -->
-
-							<!-- member social profile -->
-							<div class="mask">
-								<ul class="clearfix">
-									<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-google-outline"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-dribbble"></i></a></li>
-								</ul>
-							</div>
-							<!-- /member social profile -->
+					<div class="text-center team-box" >
+						<img src="/assets/team/member-3.jpg" alt="Tauseef" class="img-fluid">
+						<div >
+							<h5 class="mt-4 mb-1" >ABC</h5>
+							<h6 class="mb-3" >Project Manager</h6>
+							<p >You can relay on our amazing features list and also our
+								customer services will be great experience.</p>
+							<ul class="list-inline" >
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="fab fa-facebook-f fb"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="fab fa-twitter tw"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons "><i class="fab fa-linkedin-in ln"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="far fa-envelope gm"></i></a>
+								</li>
+							</ul>
 						</div>
-
-						<!-- member name & designation -->
-						<div class="member-content">
-							<h3>Carrick Mollenkamp</h3>
-							<span>Web Developer</span>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam,
-								culpa odio.</p>
-						</div>
-						<!-- /member name & designation -->
 					</div>
-				</div>
-				<!-- end team member -->
-
+				</div> 
 				<!-- team member -->
 				<div class="col-md-4 col-sm-6 ">
-					<div class="team-member text-center">
-						<div class="member-photo">
-							<!-- member photo -->
-							<img class="img-fluid" src="assets/team/member-3.jpg" alt="Meghna">
-							<!-- /member photo -->
-
-							<!-- member social profile -->
-							<div class="mask">
-								<ul class="clearfix">
-									<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-google-outline"></i></a></li>
-									<li><a href="#"><i class="tf-ion-social-dribbble"></i></a></li>
-								</ul>
-							</div>
-							<!-- /member social profile -->
+					<div class="text-center team-box" >
+						<img src="/assets/team/member-2.jpg" alt="Tauseef" class="img-fluid">
+						<div >
+							<h5 class="mt-4 mb-1" >ABC</h5>
+							<h6 class="mb-3">Web Developer</h6>
+							<p >You can relay on our amazing features list and also our
+								customer services will be great experience.</p>
+							<ul class="list-inline" >
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="fab fa-facebook-f fb"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="fab fa-twitter tw"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons "><i class="fab fa-linkedin-in ln"></i></a>
+								</li>
+								<li class="list-inline-item" >
+									<a href="#" class="icons"><i class="far fa-envelope gm"></i></a>
+								</li>
+							</ul>
 						</div>
-
-						<!-- member name & designation -->
-						<div class="member-content">
-							<h3>David Gauthier</h3>
-							<span>Head Of Management</span>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam,
-								culpa odio.</p>
-						</div>
-						<!-- /member name & designation -->
-
 					</div>
-				</div>
-				<!-- end team member -->
-			</div> <!-- End row -->
-		</div> <!-- End container -->
+				</div> 
+			</div>
+		</div>
 	</section>
 
 
@@ -361,8 +348,10 @@
 		</div>
 	</footer>
 
-	<!-- Bootstrap4 -->
+	<!-- Bootstrap5 -->
 	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+	<!-- Fontawesome -->
+	<script src="plugins/fontawesome/all.min.js"></script>
 
 	<!-- Custom js -->
 	<script src="js/script.js"></script>
